src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  /* background-image: url('https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/56951209_1186434264847534_2802208462602240_n.jpg?_nc_cat=100&_nc_sid=8bfeb9&_nc_ohc=Y7c1Nx3ko3oAX9c4ODP&_nc_ht=scontent-sjc3-1.xx&oh=1a004419f95dc9f9e4a9d0da5596e497&oe=5F057452'); */
  background: linear-gradient(rgba(84, 214, 183, 0.7), rgba(219,250, 53, 0.5)), url('https://scontent-sjc3-1.xx.fbcdn.net/v/t1.0-9/56951209_1186434264847534_2802208462602240_n.jpg?_nc_cat=100&_nc_sid=8bfeb9&_nc_ohc=Y7c1Nx3ko3oAX9c4ODP&_nc_ht=scontent-sjc3-1.xx&oh=1a004419f95dc9f9e4a9d0da5596e497&oe=5F057452');
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

/* .App-header input[type=text] {

} */

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.mainplayer {
  /* border: 2px solid white; */
  margin: 37px 165px 75px -5px;
  background-color:black;
}

.mainPlayerTV {
border: 2px solid white;
background-color: black;
padding: 90px;
/* background-image: url('../public/old-television-12.png'); */
}

.searchBr{
  margin: auto;
  /* position: fixed; */
  top:20px;  
  padding: 6px;
  /* border: none; */
  z-index: 2;
  font-size: 15px;
  border: 1px solid #ccc;
}

#favorites {
  display: table;
  /* color: green; */
}

.vidList {
  background-color: mediumslateblue;
}

.addingBtn {
  margin: 50px 0 0 0;
  background-color: gray;

}

